--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,37 +2,14 @@
 import Layout from "@layouts/Layout.astro";
 import Lance from "@images/lanceross.jpg";
 import { Picture } from "@astrojs/image/components";
-import { Icon } from "astro-icon";
 
-const socials = [
-  {
-    url: "https://twitter.com/lancerossdev",
-    icon: "eva:twitter-outline",
-    aria: "Twitter Logo",
-  },
-  {
-    url: "https:/github.com/lancerossdev",
-    icon: "eva:github-outline",
-    aria: "GitHub Logo",
-  },
-  {
-    url: "mailto:lancerossdev@duck.com",
-    icon: "eva:email-outline",
-    aria: "Email Logo",
-  },
-  {
-    url: "https://g.dev/lanceross",
-    icon: "ph:google-logo-bold",
-    aria: "Google Logo",
-  },
-];
 ---
 
 <Layout>
-  <section class="py-10 sm:flex sm:items-center sm:justify-evenly">
+  <section class="py-10 sm:flex sm:items-center sm:justify-between sm:flex-row-reverse">
     <Picture
       src={Lance}
-      class="rounded-full overflow-hidden inline-flex sm:m-8"
+      class="rounded-full overflow-hidden shadow-2xl inline-flex sm:m-8"
       alt="Lance Ross with a Face Mask"
       aspectRatio="1:1"
       widths={[320]}
@@ -42,28 +19,18 @@ const socials = [
       height={160}
     />
     <header class="mt-8 max-w-lg sm:my-0">
-      <h1 class="mb-4 text-4xl font-semibold tracking-normal dark:text-white">Lance Ross</h1>
-      <h2 class="mb-4 dark:text-zinc-200">Student Web Developer</h2>
-      <p class="max-w-10 font-normal leading-7 dark:text-zinc-300 sm:max-w-sm md:max-w-xl">
+      <h1 class="mb-4 text-3xl sm:text-4xl font-bold tracking-tight text-black dark:text-white">Lance Ross</h1>
+      <h2 class="mb-4 dark:text-zinc-200 text-black">Student Web Developer</h2>
+      <p class="max-w-10 leading-7 dark:text-zinc-300 text-black sm:max-w-sm md:max-w-xl">
         Welcome to my home on the internet. I'm an aspiring web developer in the Philippines building different projects for fun with web technologies I'm currently learning.
       </p>
     </header>
   </section>
-  <section class="py-14 grid place-items-center max-w-lg m-auto dark:text-zinc-300 text-center">
-    <h1 class="text-3xl mb-6 dark:text-white">Get In Touch</h1>
-    <p>If you want collab on a small project or just want say hello to me, Feel free to send an email and I will look forward to your message!</p>
-    {
-      socials && (
-        <ul class="mt-8 flex justify-center items-center flex-wrap">
-          {socials.map((socials) => (
-            <li class="mx-4">
-              <a href={socials.url} target="_blank" rel="noopener nofollow noreferrer" aria-label={socials.aria}>
-                <Icon name={socials.icon} class="w-7 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none my-3" />
-              </a>
-            </li>
-          ))}
-        </ul>
-      )
-    }
+  <section class="py-10 md:py-14">
+    <div class="mb-12 dark:text-zinc-300">
+      <h1 class="mb-6 dark:text-white text-3xl md:text-4xl tracking-tight font-bold">About Me</h1>
+      <p>I'm Lance Ross, a Frontend Web Developer from the Philippines. I enjoy building small projects using Astro and Tailwind CSS.</p><br />
+      <p>I create basic webpages when I have free time after school. When not busy with doing projects and schoolworks, I play video games like Genshin Impact.</p>
+    </div>
   </section>
 </Layout>
