removes images and fix links

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -13,7 +13,7 @@ const { title, description, technologies, githubUrl, stargazers } = Astro.props;
 ---
 
 <li>
-  <a href={githubUrl} class="text-lg p-6 my-2 flex flex-col gap-2 dark:bg-zinc-900 dark:hover:bg-zinc-800 hover:bg-zinc-200 text-black dark:text-zinc-400 bg-white rounded-xl shadow-xl transition-colors">
+  <a href={githubUrl} class="text-lg p-6 my-2 flex flex-col gap-2 dark:bg-zinc-900 dark:hover:bg-zinc-800 hover:bg-zinc-200 text-black dark:text-zinc-400 bg-white rounded-xl shadow-xl transition-colors" target="_blank" rel="noopener noreferrer">
   <header class="flex justify-between items-center">
     <h2 class="text-xl font-medium dark:text-white">
       {title}
