--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,6 @@
 ---
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
-import NoScript from "@components/NoScript.astro";
 import "@fontsource/inter";
 
 export interface Props {
@@ -13,9 +12,9 @@ export interface Props {
 
 const defaultMeta = {
   title: "Lance Ross",
-  description: "I'm a student web dev and a JAMStack enjoyer. Welcome to my small home on the internet!",
+  description: "I'm a Next.js and Astro Enjoyer. Welcome to my digital oasis!",
   image: "/banner.png",
-  imageAlt: "Lance Ross with a Face Mask",
+  imageAlt: "Lance Ross OG Image",
 };
 
 const { title = defaultMeta.title, description = defaultMeta.description, heroImage = defaultMeta.image, imageAlt = defaultMeta.imageAlt } = Astro.props as Props;
@@ -82,6 +81,5 @@ const classBody = "antialiased transition scrollbar-thin scrollbar-thumb-zinc-40
       <slot />
     </main>
     <Footer />
-    <NoScript />
   </body>
 </html>
