--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ const socials = [
     name: "Twitter",
   },
   {
-    url: "https:/github.com/lancerossdev",
+    url: "https://github.com/lancerossdev",
     icon: "eva:github-outline",
     name: "GitHub",
   },
