i just discovered inter variables

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import { Picture } from "@astrojs/image/components";
 ---
 
 <Layout>
-  <section class="py-10 sm:flex sm:items-center sm:justify-between sm:flex-row-reverse">
+  <section class="pb-10 pt-5 sm:flex sm:items-center sm:justify-between sm:flex-row-reverse">
     <Picture
       src={Lance}
       class="rounded-full overflow-hidden shadow-2xl inline-flex sm:m-8"
