--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
-import "@fontsource/inter";
+import "@fontsource/inter/variable.css";
 
 export interface Props {
   title?: string;
