--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ const navbar = [
       class="nav-toggle mx-3 my-5 flex items-center bg-zinc-200 dark:bg-zinc-800 h-9 hover:ring-2 justify-center ring-zinc-300 dark:ring-zinc-700 rounded-md shrink-0 touch-manipulation transition-all w-9 sm:hidden"
       aria-label="menu toggle"
     >
-      <Icon name="ion:menu" class="w-5 dark:text-white transition-colors" />
+      <Icon name="ion:menu" class="w-5 dark:text-white text-black transition-colors" />
     </button>
     <a href="/" class="m-5"><img src={Logo} alt="Favicon" class="flex items-center w-9 h-9" /></a>
     {
