--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -10,7 +10,7 @@ const { text, logo } = Astro.props as Props;
 ---
 
 <li class="flex items-center p-4">
-  <span class="flex justify-center items-center w-11 h-11 mr-3 rounded-full dark:bg-zinc-800 bg-zinc-200 border-t border-zinc-400 text-zinc-800 dark:text-white dark:border-zinc-600 transition-colors motion-reduce:transition-none">
+  <span class="flex justify-center items-center w-12 h-12 mr-3 rounded-full dark:bg-zinc-800 bg-zinc-200 text-zinc-800 dark:text-white transition-colors">
     <Icon name={logo} class="w-6" />
   </span>
   <p>{text}</p>
