--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const defaultMeta = {
 const { title = defaultMeta.title, description = defaultMeta.description, heroImage = defaultMeta.image, imageAlt = defaultMeta.imageAlt } = Astro.props as Props;
 const canonicalURL = new URL(Astro.url).href
 
-const classBody = "antialiased transition scrollbar-thin scrollbar-thumb-zinc-400 scrollbar-track-zinc-300 dark:scrollbar-thumb-zinc-500 dark:scrollbar-track-zinc-700 dark:bg-zinc-900 dark:text-white font-inter selection:bg-blue-500/70 text-lg sm:text-xl";
+const classBody = "antialiased transition scrollbar-thin scrollbar-thumb-zinc-400 scrollbar-track-zinc-300 dark:scrollbar-thumb-zinc-500 dark:scrollbar-track-zinc-700 dark:bg-zinc-900 dark:text-white font-sans text-lg sm:text-xl";
 
 ---
 
@@ -80,6 +80,5 @@ const classBody = "antialiased transition scrollbar-thin scrollbar-thumb-zinc-40
     <main class="m-auto p-6 max-w-4xl md:p-8">
       <slot />
     </main>
-    <Footer />
   </body>
 </html>
