--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import { Picture } from "@astrojs/image/components";
   <section class="pb-10 pt-5 sm:flex sm:items-center sm:justify-between sm:flex-row-reverse">
     <Picture
       src={Lance}
-      class="rounded-full overflow-hidden shadow-2xl inline-flex sm:m-8"
+      class="rounded-full overflow-hidden inline-flex sm:m-8"
       alt="Lance Ross with a Face Mask"
       aspectRatio="1:1"
       widths={[320]}
