remove analytics and light mode (edit ui)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,34 +11,12 @@ const navbar = [
 ];
 ---
 
-<header class="flex flex-row justify-between transition bg-zinc-900 text-zinc-300 text-lg mx-auto max-w-6xl">
+<header class="flex flex-row justify-between text-zinc-300 text-lg mb-14">
   {
     (
-        <ul class="flex-row hidden sm:flex">
-          {navbar.map((navbar) => (
-            <li>
-              <NavLink href={navbar.href} name={navbar.name} />
-            </li>
-          ))}
-        </ul>
-      )
-    }<button
-      class="theme-toggle mx-3 sm:mx-6 my-5 flex items-center bg-zinc-200 dark:bg-zinc-800 h-9 hover:ring-2 justify-center ring-zinc-300 dark:ring-zinc-700 rounded-md shrink-0 touch-manipulation transition-all w-9"
-      aria-label="theme toggle"
-    >
-      <Icon name="eva:moon-outline" class="w-5 text-zinc-800 transition-colors dark:hidden" />
-      <Icon name="akar-icons:sun" class="w-5 dark:text-white transition-colors hidden dark:block" />
-    </button>
-  </nav>
-</header>
-<header class="nav-menu hidden bg-white dark:bg-zinc-900 transition-colors">
-  {
-    (
-      <nav class="mx-8 my-4 flex flex-col inline-flex space-y-3">
+      <nav class="flex items-center justify-start max-w-min rounded-md bg-zinc-800/60 mx-auto overflow-x-auto sm:overflow-x-visible px-4">
         {navbar.map((navbar) => (
-          <a href={navbar.href} class="dark:text-zinc-300 text-black hover:text-zinc-500 dark:hover:text-zinc-400 sm:hidden">
-            {navbar.name}
-          </a>
+          <NavLink href={navbar.href} name={navbar.name} />
         ))}
       </nav>
     )
