--- a/src/components/NavLink.astro
+++ b/src/components/NavLink.astro
@@ -16,7 +16,7 @@ if (href === "/") {
 
 <a
   class:list={[
-    "dark:text-zinc-300 dark:hover:bg-zinc-800 hover:bg-zinc-200 rounded-lg transition-colors inline-block px-3 py-2 text-zinc-700",
+    "text-zinc-300 hover:bg-zinc-800 rounded-sm transition inline-block px-3 py-2",
     { "font-bold dark:!text-white": isActive },
     { "font-normal": !isActive },
   ]}
