--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -13,9 +13,9 @@ const { title, description, technologies, githubUrl, stargazers } = Astro.props;
 ---
 
 <li>
-  <a href={githubUrl} class="text-lg p-6 my-2 flex flex-col gap-2 dark:bg-zinc-900 dark:hover:bg-zinc-800 hover:bg-zinc-200 text-black dark:text-zinc-400 bg-white rounded-xl shadow-xl transition-colors" target="_blank" rel="noopener noreferrer">
+  <a href={githubUrl} class="flex flex-col text-lg bg-zinc-800/30 hover:ring-2 text-zinc-400 p-6 my-2 gap-2 rounded-md transition" target="_blank" rel="noopener noreferrer">
   <header class="flex justify-between items-center">
-    <h2 class="text-xl font-medium dark:text-white">
+    <h2 class="text-xl font-medium text-white">
       {title}
     </h2>
     <div class="flex gap-2 ml-2">
@@ -25,9 +25,9 @@ const { title, description, technologies, githubUrl, stargazers } = Astro.props;
   </header>
   {
     technologies && (
-      <ul class="flex gap-2 flex-wrap text-black dark:text-white">
+      <ul class="flex gap-2 flex-wrap text-white">
         {technologies.map((tech) => (
-          <li class="dark:bg-zinc-700/50 bg-zinc-300/50 py-0.5 px-2 text-sm rounded-md transition-colors">{tech}</li>
+          <li class="bg-zinc-800 py-0.5 px-2 text-sm rounded-md">{tech}</li>
         ))}
       </ul>
     )
