--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -19,8 +19,8 @@ const metadata = {
 
 <Layout {...metadata}>
   <section>
-    <h1 class="mb-6 dark:text-white text-3xl md:text-4xl tracking-tight font-bold">Blog Posts</h1>
-    <p class="dark:text-zinc-300 mb-6">
+    <h1 class="mb-6 text-3xl md:text-4xl tracking-tight font-bold">Blog Posts</h1>
+    <p class="text-zinc-300 mb-6">
       This is where I write about my experiences as a student web developer, and share some basic tutorials in web development. Currently, I have published {blogs.length} blog posts.
     </p>
   </section>
