import blog again (another edit ui)

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,7 +52,7 @@ const canonicalURL = new URL(Astro.url).href;
     <meta name="author" content="Lance Ross" />
   </head>
   <body class="bg-zinc-900 text-white text-lg sm:text-xl">
-    <main class="m-auto p-6 max-w-4xl md:p-8">
+    <main class="m-auto p-8 max-w-4xl md:px-20">
       <Header />
       <slot />
     </main>
