--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,27 +12,22 @@ const metadata = {
 const socials = [
   {
     url: "https://twitter.com/lancerossdev",
-    icon: "eva:twitter-outline",
+    icon: "mdi:twitter",
     name: "Twitter",
   },
   {
     url: "https://github.com/lancerossdev",
-    icon: "eva:github-outline",
+    icon: "mdi:github",
     name: "GitHub",
   },
   {
     url: "mailto:lancerossdev@duck.com",
-    icon: "eva:email-outline",
+    icon: "dashicons:email",
     name: "Email",
   },
   {
-    url: "https://g.dev/lanceross",
-    icon: "ion:code",
-    name: "Google Devs",
-  },
-  {
     url: "https://dev.to/lanceross",
-    icon: "la:dev",
+    icon: "fa-brands:dev",
     name: "Dev Community",
   },
 ];
