--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -12,18 +12,18 @@ const shortDate = new Date(pubDate).toLocaleDateString("en", {
 url = url + "/";
 ---
 
-<li class="sm:grid flex flex-col gap-2 sm:grid-cols-3 leading-relaxed rounded-2xl border-zinc-700 dark:text-zinc-400 transition-colors">
-  <a class="col-span-3 flex flex-col gap-2 sm:gap-4 shadow-xl sm:shadow-none p-5 my-3 hover:dark:bg-zinc-800 hover:bg-zinc-200 rounded-lg transition-colors" href={url}>
-    <time datetime={pubDate} class="block sm:hidden text-sm tracking-wide text-black dark:text-zinc-400">{shortDate}</time>
+<li class="sm:grid flex flex-col gap-2 sm:grid-cols-3 leading-relaxed rounded-2xl text-zinc-400">
+  <a class="col-span-3 flex flex-col rounded-lg gap-2 sm:gap-4 p-5 my-3 hover:bg-zinc-800/60 hover:ring-2 transition" href={url}>
+    <time datetime={pubDate} class="block sm:hidden text-sm tracking-wide text-zinc-400">{shortDate}</time>
     <span class="flex items-center justify-between">
       <h2
-      class="text-xl text-black dark:text-white transition-colors"
+      class="text-xl text-white"
     >
       {title}
     </h2>
-    <time datetime={pubDate} class="hidden sm:block text-sm tracking-wide text-black dark:text-zinc-400">{shortDate}</time>
+    <time datetime={pubDate} class="hidden sm:block text-sm tracking-wide text-zinc-400">{shortDate}</time>
 
     </span>
-    <p class="text-base text-black dark:text-zinc-400 transition-colors">{description}</p>
+    <p class="text-base text-zinc-400">{description}</p>
   </a>
 </li>
