--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,12 @@
 ---
-import { Icon } from "astro-icon";
 import NavLink from "@components/NavLink.astro";
-import Logo from "/favicon.svg";
 
 const navbar = [
   { name: "Home", href: "/" },
   { name: "About", href: "/about" },
   { name: "Projects", href: "/projects" },
   { name: "Blog", href: "/blog" },
+  { name: "RSS", href: "/rss.xml" },
 ];
 ---
 
