--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -19,7 +19,7 @@ const metadata = {
 
 <Layout {...metadata}>
   <section>
-    <h1 class="mb-6 text-3xl md:text-4xl tracking-tight font-bold">Blog Posts</h1>
+    <h1 class="mb-6 text-3xl md:text-4xl font-semibold tracking-tight">Blog</h1>
     <p class="text-zinc-300 mb-6">
       This is where I write about my experiences as a student web developer, and share some basic tutorials in web development. Currently, I have published {blogs.length} blog posts.
     </p>
