final fixes for today

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -56,7 +56,7 @@ pubDate = pubDate.split("T")[0];
         </nav>
       </header>
       <section
-        class="prose sm:prose-lg text-zinc-200 prose-a:text-blue-400 prose-a:no-underline hover:prose-a:underline prose-invert prose-a:underline-offset-2 flex flex-col items-center"
+        class="prose sm:prose-lg text-zinc-200 prose-a:text-blue-400 prose-a:no-underline hover:prose-a:underline prose-invert prose-a:underline-offset-2"
       >
         <article>
           <slot />
