--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,8 +12,8 @@ export interface Props {
 const defaultMeta = {
   title: "Lance Ross",
   description: "I'm a Next.js and Astro Enjoyer. Welcome to my digital oasis!",
-  image: "/banner.png",
-  imageAlt: "Lance Ross OG Image",
+  image: "/opengraph.png",
+  imageAlt: "Favicon",
 };
 
 const { title = defaultMeta.title, description = defaultMeta.description, heroImage = defaultMeta.image, imageAlt = defaultMeta.imageAlt } = Astro.props as Props;
