--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -43,7 +43,7 @@ const socials = [
   </section>
   <section class="py-10 md:py-14 text-zinc-300">
     <h1 class="mb-6 text-3xl md:text-4xl text-white font-semibold">Get In Touch</h1>
-    <p>If you want collab on a small project or just want say hello to me, Feel free to send an email and I will look forward to your message! By the way, here are my socials below.</p>
+    <p>If you'd like to collab on a small project or just want to say hello, feel free to send me an email. You can also connect with me with my social accounts.</p>
     {
       socials && (
         <ul class="mt-8 flex flex-wrap">
