change favicon and og image

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -35,7 +35,7 @@ pubDate = pubDate.split("T")[0];
     <meta property="og:image" content={ogImage} />
     <meta property="og:site_name" content="Lance Ross" />
     <meta property="og:locale" content="en_US" />
-    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:card" content="summary" />
     <meta property="twitter:url" content={canonicalURL} />
     <meta name="twitter:site" content="@lancerossdev" />
     <meta name="twitter:creator" content="@lancerossdev" />
