--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,7 @@ const canonicalURL = new URL(Astro.url).href;
     <meta property="og:image:alt" content={imageAlt} />
     <meta property="og:site_name" content="Lance Ross" />
     <meta property="og:locale" content="en_US" />
-    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:card" content="summary" />
     <meta property="twitter:url" content={canonicalURL} />
     <meta name="twitter:site" content="@lancerossdev" />
     <meta name="twitter:creator" content="@lancerossdev" />
